--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,13 @@
-@article{2019-taso,
-    author = 
+@article{eqsat-2021,
+    author = {Yichen Yang, Phitchaya Mangpo Phothilimthana, Yisu Remy Wang, Max Willsey, Sudip Roy, Jacques Pienaar},
+    title = {Equality Saturation for Tensor Graph Superoptimization},
+    journal = {arXiv:2101.01332},
+    year = {2021},
+}
+
+@article{taso-2019,
+    author    = {Zhihao Jia, Oded Padon, James Thomas, Todd Warszawski, Matei Zaharia, Alex Aiken},
+    title     = {TASO: Optimizing Deep Learning Computation with Automatic Generation of Graph Substitutions},
+    journal   = {In Proceedings of the Conference on Systems and Machine Learning (SysML)},
+    year      = {2019},
 }
